--- a/style.css
+++ b/style.css
@@ -160,3 +160,20 @@ ul {
 .button-draw:hover {
     background-color: var(--color-button-hover);
 }
+
+
+/* Botón de reiniciar */
+.button {
+    
+    align-items: center;
+    width: 100%;
+    padding: 10px 40px;
+    color: var(--color-white);
+    background-color: var(--color-button);
+    font-size: 16px;
+}
+
+
+.button-draw:hover {
+    background-color: var(--color-button-hover);
+}
